--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-icons": "3.11.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
